--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -9,20 +9,19 @@
 .about-project__header {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 89%;
     box-sizing: border-box;
     border: 1px solid #fff;
     border-left: none;
     border-right: none;
     border-top: none;
     margin: 110px auto 0 auto;
-    max-width: 1140px;
 }
 
 .about-project__header-title {
     color: #fff;
     padding-bottom: 23px;
-    width: 600px;
+    width: 200px;
     height: 27px;
     font-size: 22px;
     font-style: normal;
@@ -36,9 +35,8 @@
     flex-direction: row;
     box-sizing: border-box;
     margin: 70px auto 0 auto;
-    max-width: 1140px;
-    width: 100%;
     gap: 40px;
+    width: 89%;
 }
 
 .about-project__content {
@@ -71,9 +69,9 @@
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    max-width: 1140px;
     width: 100%;
     margin: 110px auto 110px auto;
+    width: 89%;
 }
 
 .about-project__backend {
@@ -128,4 +126,89 @@
     font-weight: 500;
     line-height: 17px;
     padding-top: 14px;
+}
+
+@media (max-width: 768px) {
+    .about-project__header {
+        margin: 92px auto 0 auto;
+    }
+
+    .about-project__header {
+        width: 87%;
+    }
+
+    .about-project__container {
+        width: 87%;
+        gap: 30px;
+    }
+
+    .about-project__timeline {
+        width: 87%;
+        margin: 92px auto 90px auto;
+    }
+
+    .about-project__content_subtitle {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-project__content_title {
+        padding-bottom: 22px;
+    }
+
+    .about-project__backend {
+        max-width: 140px;
+    }
+}
+
+@media (max-width: 320px) {
+    .about-project__header {
+        margin: 69px auto 0 auto;
+    }
+
+    .about-project__header-title {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+    }
+
+    .about-project__container {
+        margin: 60px auto 0 auto;
+        flex-direction: column;
+        width: 90%;
+        gap: 59px;
+    }
+
+    .about-project__content_title {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+        padding-bottom: 15px;
+    }
+
+    .about-project__content_subtitle {
+        font-size: 11px;
+        line-height: 16px;
+    }
+
+    .about-project__timeline {
+        margin: 60px auto 110px auto;
+        width: 89%;
+    }
+
+    .about-project__backend {
+        max-width: 100px;
+    }
+
+    .about-project__backend-scale {
+        font-size: 11px;
+    }
+
+    .about-project__frontend-scale {
+        font-size: 11px;
+    }
+
+    .about-project__timeline-title {
+        font-size: 11px;
+        font-weight: 400;
+        padding-top: 8px;
+    }
 }
