--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -3,26 +3,26 @@
     flex-direction: column;
     background-color: #202020;
     width: 100%;
+    max-width: 1280px;
     box-sizing: border-box;
 }
 
 .about-me__header {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 89%;
     box-sizing: border-box;
     border: 1px solid #fff;
     border-left: none;
     border-right: none;
     border-top: none;
     margin: 110px auto 0 auto;
-    max-width: 1140px;
 }
 
 .about-me__header-title {
     color: #fff;
     padding-bottom: 23px;
-    width: 600px;
+    width: 200px;
     height: 27px;
     font-size: 22px;
     font-style: normal;
@@ -37,6 +37,7 @@
     box-sizing: border-box;
     margin: 66px 70px 101px 70px;
     gap: 270px;
+    box-sizing: border-box;
 }
 
 .about-me__content {
@@ -85,7 +86,113 @@
 }
 
 .about-me__photo {
+    margin: 0;
     width: 270px;
     height: 327px;
-    margin: 0;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+@media (max-width: 1024px) {
+    .about-me__container {
+        gap: 120px;
+    }
+}
+
+@media (max-width: 768px) {
+    .about-me__header {
+        width: 87%;
+        margin: 80px auto 0 auto;
+    }
+
+    .about-me__content-name {
+        font-size: 40px;
+        line-height: 40x;
+        letter-spacing: -1.6px;
+        margin-bottom: 6px;
+    }
+
+    .about-me__container {
+        margin: 58px 50px 90px 50px;
+        gap: 45px;
+    }
+
+    .about-me__content-info {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 0 0 20px 0;
+    }
+
+    .about-me__content-history {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 0 0 70px 0;
+    }
+
+    .about-me__photo {
+        width: 255px;
+        height: 307px;
+    }
+
+    .about-me__content {
+        max-width: 365px;
+    }
+}
+
+@media (max-width: 550px) {
+    .about-me__container {
+        flex-direction: column-reverse;
+        margin: 66px 50px 101px 50px;
+    }
+
+    .about-me__photo {
+        margin: 0 auto 0 auto;
+        width: 292px;
+        height: 352px;
+    }
+
+    .about-me__content {
+        max-width: 380px;
+    }
+}
+
+@media (max-width: 400px) {
+    .about-me__container {
+        margin: 66px 14px 101px 14px;
+    }
+
+    .about-me__content {
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 320px) {
+    .about-me__header {
+        margin-top: 121px;
+        width: 91%;
+    }
+
+    .about-me__header-title {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+    }
+
+    .about-me__container {
+        margin-top: 62px;
+        margin-bottom: 70px;
+        gap: 40px;
+    }
+
+    .about-me__content-name {
+        font-size: 30px;
+        line-height: normal;
+        letter-spacing: -1.2px;
+        margin-bottom: 18px;
+    }
+
+    .about-me__content-history {
+        font-size: 11px;
+        line-height: 16px;
+        margin-bottom: 40px;
+    }
 }
