--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     height: 172px;
     background-color: #202020;
-    max-width: 1280px;
     width: 100%;
+    max-width: 1280px;
 }
 
 .footer__info {
@@ -13,8 +13,7 @@
     border-right: none;
     border-top: none;
     color: #8B8B8B;
-    max-width: 1140px;
-    width: 100%;
+    width: 89%;
     text-align: center;
     font-size: 13px;
     font-style: normal;
@@ -25,11 +24,9 @@
 }
 
 .footer__links {
-    max-width: 1140px;
-    width: 100%;
     display: flex;
-    flex-direction: row;
-    margin: 20px auto 0 auto;
+    justify-content: space-between;
+    margin: 20px 70px 0 70px;
 }
 
 .footer__year {
@@ -39,7 +36,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin: 0 910px 0 0;
+    margin: 0 10px 0 0;
 }
 
 .footer__link {
@@ -56,4 +53,53 @@
 
 .footer__link:last-child {
     margin-right: 0;
+}
+
+@media (max-width: 768px) {
+    .footer__info {
+        margin: 25px auto 0 auto;
+    }
+
+    .footer__info {
+        width: 87%;
+    }
+
+    .footer__links {
+        margin: 20px 30px 0 30px;
+    }
+}
+
+@media (max-width: 320px) {
+    .footer__info {
+        width: 93%;
+        font-size: 12px;
+    }
+
+    .footer__links {
+        flex-direction: column-reverse;
+        margin-top: 30px;
+    }
+
+    .footer__hrefs {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        margin-bottom: 30px;
+    }
+
+    .footer__link {
+        text-align: center;
+        font-size: 12px;
+        margin-right: 0;
+    }
+
+    .footer {
+        height: 198px;
+    }
+
+    .footer__year {
+        font-size: 12px;
+        margin: 0 auto 0 auto;
+        line-height: normal;
+    }
 }
