--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,8 +12,81 @@
     margin: 0 0 0 70px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .header__logo {
-    margin: 0 919px 0 0;
+    margin: 0;
+}
+
+.header__links {
+    display: flex;
+    flex-direction: row;
+}
+
+.header__links-registration {
+    color: #fff;
+    text-align: right;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    align-self: center;
+    margin: 0 30px 0 0;
+    text-decoration: none;
+}
+
+.header__links-login {
+    color: #000;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    align-self: center;
+    width: 76px;
+    height: 32px;
+    border-radius: 3px;
+    background-color: #3DDC84;
+    text-align: center;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    margin-right: 70px;
+}
+
+@media (max-width: 768px) {
+    .header__container {
+        margin: 0 0 0 30px;
+    }
+
+    .header__links-login {
+        margin-right: 30px;
+    }
+}
+
+@media (max-width: 320px) {
+    .header__container {
+        margin: 0 0 0 14px;
+    }
+
+    .header__links-login {
+        margin-right: 14px;
+    }
+
+    .header__links-login {
+        height: 26px;
+        width: 54px;
+    }
+
+    .header__links-registration {
+        font-size: 10px;
+        margin-right: 15px;
+    }
+
+    .header__links-login {
+        font-size: 10px;
+        height: 26px;
+    }
 }
