--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -30,11 +30,7 @@
     border-right: none;
     border-top: none;
     margin-top: 20px;
-    max-width: 1140px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    width: 94%;
 }
 
 .portfolio__content:last-child {
@@ -49,9 +45,65 @@
     font-weight: 400;
     line-height: 50px;
     letter-spacing: -1.2px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .portfolio__arrow {
-    padding-bottom: 15px;
     padding-right: 5px;
+}
+
+@media (max-width: 768px) {
+    .portfolio__content {
+        width: 92%;
+    }
+
+    .portfolio__header {
+        margin-left: 50px;
+    }
+
+    .portfolio__links {
+        margin: 0 0 125px 45px;
+    }
+
+    .portfolio__link {
+        font-size: 28px;
+        letter-spacing: -1.12px;
+    }
+
+    .portfolio__arrow {
+        padding-right: 0;
+        padding-top: 2px;
+    }
+}
+
+@media (max-width: 320px) {
+    .portfolio__header {
+        font-size: 14px;
+        line-height: 20px;
+        margin: 0 0 20px 14px;
+    }
+
+    .portfolio__link {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+        line-height: 28px;
+    }
+
+    .portfolio__links {
+        margin: 0 0 105px 14px;
+    }
+
+    .portfolio__content {
+        height: 47px;
+        width: 94%;
+    }
+
+    .portfolio__arrow {
+        width: 12px;
+        height: 24px;
+        padding-top: 0;
+    }    
 }
