--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,6 +19,10 @@
     margin: 0;
 }
 
+.header__logo:hover {
+    opacity: .5;
+}
+
 .header__links {
     display: flex;
     flex-direction: row;
@@ -34,6 +38,10 @@
     align-self: center;
     margin: 0 30px 0 0;
     text-decoration: none;
+}
+
+.header__links-registration:hover {
+    opacity: .5;
 }
 
 .header__links-login {
@@ -54,6 +62,10 @@
     align-items: center;
     text-decoration: none;
     margin-right: 70px;
+}
+
+.header__links-login:hover {
+    opacity: .5;
 }
 
 @media (max-width: 768px) {
