--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -10,11 +10,16 @@
     height: 38px;
 }
 
+.login__header:hover {
+    opacity: .5;
+}
+
 .login__container {
     display: flex;
     flex-direction: column;
     max-width: 396px;
     width: 100%;
+    margin-top: 70px;
 }
 
 .login__greeting {
@@ -71,6 +76,10 @@
     border-style: none;
 }
 
+.login__button:hover {
+    opacity: .5;
+}
+
 .login__hint {
     color: #8B8B8B;
     text-align: center;
@@ -90,6 +99,10 @@
     text-decoration: none; 
 }
 
+.login__link:hover {
+    opacity: .5;
+}
+
 .login__error {
     color: #EE3465;
     font-size: 10px;
@@ -97,6 +110,12 @@
     font-weight: 400;
     line-height: normal;
     margin: 0 0 157px 0;
+}
+
+@media (max-width: 768px) {
+    .login__container {
+        margin-top: 232px;
+    }
 }
 
 @media (max-width: 425px) {
@@ -141,5 +160,9 @@
 
     .login__link {
         font-size: 12px;
+    }
+
+    .login__container {
+        margin-top: 56px;
     }
 }
