--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -51,6 +51,10 @@
     justify-content: space-between;
 }
 
+.portfolio__link:hover {
+    opacity: .5;
+}
+
 .portfolio__arrow {
     padding-right: 5px;
 }
