--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -66,6 +66,20 @@
     width: 396px;
     height: 45px;
     border-radius: 3px;
+    background: #bbc6d6;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border-style: none;
+}
+
+.register__button__active {
+    width: 396px;
+    height: 45px;
+    border-radius: 3px;
     background: #4285F4;
     color: #fff;
     text-align: center;
@@ -76,7 +90,7 @@
     border-style: none;
 }
 
-.register__button:hover {
+.register__button__active:hover {
     opacity: .5;
 }
 
