--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -25,7 +25,7 @@
     background-color: #202020;
     border: none;
     color: #fff;
-    width: 90%;
+    width: 70%;
     color: #8B8B8B;
     font-size: 28px;
     font-style: normal;
@@ -52,6 +52,11 @@
 
 .search-form__button:hover {
     opacity: .5;
+}
+
+.search-form__error {
+    color: #ff0000;
+    align-self: center;
 }
 
 @media (max-width: 768px) {
